<resources>
    <string name="app_name">Утилизационный сбор</string>
    <string name="app_name1">Утилизационный сбор\n(Республика Беларусь)</string>
    <string name="author">Анатолий Огурцов</string>
    <string name="email">AnatoliOgurtsov@gmail.com</string>
    <string name="about">О программе</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_section4">Section 4</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- Для утилизационного сбора -->
    <!-- =============================================================== -->
    <string name="a1">с электродвигателями, за исключением транспортных средств с гибридной силовой установкой</string>
    <string name="a2">с рабочим объемом двигателя, в том числе транспортных средств с гибридной силовой установкой:</string>
    <string name="a3">ввозимые физическими лицами для личного пользования, вне зависимости от рабочего объема двигателя</string>
    <string name="a3_1">ввозимые(ввезенные) с территории государств - членов Евразийского экономического союза,
        за исключением транспортных средств, находящихся под таможенным контролем, вне зависимости от рабочего объема двигателя</string>
    <string name="a4">до 1000 см<sup>3</sup></string>
    <string name="a5">1000-2000 см<sup>3</sup></string>
    <string name="a6">2000-3000 см<sup>3</sup></string>
    <string name="a7">3000-3500 см<sup>3</sup></string>
    <string name="a8">3500 см<sup>3</sup> и выше</string>
    <string name="a9">транспортные средства полной массой:</string>
    <string name="a10">автосамосвалы, автомобили-фургоны, включая рефрижераторы, полной массой:</string>
    <string name="a11">до 2,5 тонны</string>
    <string name="a12">от 2,5 до 3,5 тонн</string>
    <string name="a13">от 3,5 до 5 тонн</string>
    <string name="a14">от 5 до 8 тонн</string>
    <string name="a15">от 8 до 12 тонн</string>
    <string name="a16">от 12 до 20 тонн</string>
    <string name="a17">от 20 до 50 тонн</string>
    <string name="a18">до 2500 см<sup>3</sup></string>
    <string name="a19">2500-5000 см<sup>3</sup></string>
    <string name="a20">5000-10000 см<sup>3</sup></string>
    <string name="a21">10000 см<sup>3</sup> и выше</string>
    <string name="a22">от 50 до 80 тонн</string>
    <string name="a23">от 80 до 350 тонн</string>
    <string name="a24">350 тонн и выше</string>
    <string name="a25">ПОЛНАЯ МАССА :</string>
    <string name="a26">специальное транспортное средство:</string>
    <string name="a27">специальные транспортные средства, кроме автобетоносмесителей</string>
    <string name="a28">автобетоносмесители</string>


    <string name="title_activity_vybor_obema_us">Выбор объема</string>
    <string name="info"><b>Приложение расчета суммы утилизационного сбора за ввезенный в Республику Беларусь
                        автомобильный транспорт (с учетом деноминации 1 июля 2016 года).</b>\n\n
                        <b>Нормативные правовые акты:</b>\n\n
        -Указ Президента Республики Беларусь от 4 февраля 2014 года №4 Об утилизационном сборе в отношении транспортных средств;\n
        -Постановление Совета Министров Республики Беларусь от 27 февраля 2014 года
        № 172 О мерах по реализации Указа Президента Республики Беларусь от 4 февраля 2014 года;\n
        -Постановление Совета Министров Республики Беларусь от 31 января 2016 года
        № 74 О внесении изменений и дополнения в постановление Совета Министров Республики Беларусь от 27 февраля 2014 г. № 172.\n\n
        Утилизационный сбор уплачивается только в отношении транспортных средств,
        которые указаны в данном приложении.\n\n
                        <b>Утилизационный сбор уплачивается однократно за каждое транспортное средство:</b>\n\n
        -произведенное(изготовленное) на территории Республики Беларусь и отчуждаемое(за
        исключением отчуждаемого за пределы Республики Беларусь) либо используемое
        производителем(изготовителем) для собственных нужд;\n\n
        -ввозимое(ввезенное) в Республику Беларусь в качестве товара для личного пользования,
        выпускаемое(выпущенное) в целях обращения без ограничений по пользованию и распоряжению\n
        в соответствии с Соглашением о порядке перемещения физическими лицами товаров
        для личного пользования через таможенную границу Таможенного союза и совершения
        таможенных операций, связанных с их выпуском, от 18 июня 2010 года;\n\n
        -ввозимое(ввезенное) и помещаемое(помещенное) под таможенную процедуру выпуска для
        внутреннего потребления;\n\n
        -ввезенное с территории государств-членов Таможенного союза и подлежащее государственной
        регистрации на территории Республики Беларусь в соответствии с законодательством Республики Беларусь.\n

        </string>
    <string name="do_3">ДО 3 ЛЕТ</string>
    <string name="more_3">СТАРШЕ 3 ЛЕТ</string>
    <string name="play_market">Скачать с Play Market</string>
    <string name="dor_sbor">Дорожный сбор</string>
    <string name="denom">(с учетом деноминации 01.07.2016)</string>

</resources>
