<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="357dp"
    android:orientation="vertical"
    android:background="@color/whiteblue"


    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/textview1"
        android:text="@string/a11"
        android:gravity="center"
        android:textSize="20sp"
        android:singleLine="true"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/banner"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/textview2"
        android:text="@string/a12"
        android:gravity="center"
        android:textSize="20sp"
        android:singleLine="true"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/banner"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/textview3"
        android:text="@string/a13"
        android:gravity="center"
        android:textSize="20sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/banner"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/textview4"
        android:text="@string/a14"
        android:gravity="center"
        android:textSize="20sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/banner"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/textview5"
        android:text="@string/a15"
        android:gravity="center"
        android:textSize="20sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/banner"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/textview6"
        android:text="@string/a16"
        android:gravity="center"
        android:textSize="20sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/banner"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/textview7"
        android:text="@string/a17"
        android:gravity="center"
        android:textSize="20sp"
        />

</LinearLayout>