<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="254dp"
    android:orientation="vertical"
    android:background="@color/whiteblue"

    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/textview1"
        android:text="@string/a4"
        android:gravity="center"

        android:textSize="20sp"
        android:singleLine="true"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/banner"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/textview2"
        android:text="@string/a5"
        android:gravity="center"

        android:textSize="20sp"
        android:singleLine="true"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/banner"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/textview3"
        android:text="@string/a6"
        android:gravity="center"

        android:textSize="20sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/banner"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/textview4"
        android:text="@string/a7"
        android:gravity="center"

        android:textSize="20sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/banner"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/textview5"
        android:text="@string/a8"
        android:gravity="center"

        android:textSize="20sp"
        />

</LinearLayout>
