<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:paddingTop="10dp"
android:paddingBottom="10dp"

    >
<RadioGroup
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/RG_M1"
    android:orientation="vertical"
    >

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a1"
        android:id="@+id/radioButton1"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/banner"
        />
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a2"
        android:id="@+id/radioButton2" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/banner"
        />
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a3"
        android:id="@+id/radioButton3" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/banner"
        />
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a3_1"
        android:id="@+id/radioButton3_1" />

</RadioGroup>

</LinearLayout>
