<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    >

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_vid_TS_util"
        android:layout_gravity="center_horizontal"
        android:spinnerMode="dialog"
        android:background="@color/whiteblue"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        android:paddingTop="10dp"
        android:background="@color/whiteblue"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id = "@+id/tv_do3"
            android:text="@string/do_3"
            android:gravity="center"
            android:layout_weight="50"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id = "@+id/tv_ot3"
            android:text= "@string/more_3"
            android:gravity="center"
            android:layout_weight="50"/>
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:orientation="horizontal"
        android:background="@color/whiteblue"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/poloska_do3"
            android:layout_weight="1"
            android:background="@color/banner"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/poloska_ot3"
            android:layout_weight="1"
            android:background="@color/whiteblue"
            />
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:id="@+id/FL1"
        android:background="@color/whiteblue"
        >
    </FrameLayout>

    <!--=======================================================-->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/FL2"
        android:background="@color/whiteblue"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv"
                android:text="РЕЗУЛЬТАТ"
                android:textSize="20sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv2"
                android:text="@string/denom"
                android:textSize="15sp"
                />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>